--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# misc
+.DS_Stor
+.env.local
+.env.development
+.env.development.local
+.env.test.local
+.env.production.local
